Image size fix on mobile listing

--- a/templates/components/listings/_base.scss
+++ b/templates/components/listings/_base.scss
@@ -74,7 +74,7 @@
 
     @include breakpoint(0) {
       img {
-        margin: 0 auto 0 -33%;
+        margin: 0 auto;
         max-height: 100%;
         max-width: 200%;
       }
